--- a/sourcing/views/hr_employee_views.xml
+++ b/sourcing/views/hr_employee_views.xml
@@ -8,7 +8,10 @@
         <field name="arch" type="xml">
         	<xpath expr="//field[@name='coach_id']" position="after">
         		<field name="is_module_lead"/>
-        	</xpath>            
+        	</xpath>
+            <xpath expr="//field[@name='job_id']" position="after">
+                <field name="registration_number"/>
+            </xpath>            
         </field>
     </record>
 </odoo>
