Updated groups for workorder and sourcing

--- a/employee_recruitment_customisation/views/res_partner_views.xml
+++ b/employee_recruitment_customisation/views/res_partner_views.xml
@@ -133,5 +133,5 @@
             action="res_partner_overview_workorder"
             id="partner_workorder_overview_menu"
             parent="hr_recruitment.menu_hr_recruitment_root" sequence="98"
-            name="WO-Overview"/>
+            name="WO-Overview" groups="employee_recruitment_customisation.group_workorder_manager,employee_recruitment_customisation.group_workorder_user"/>
 </odoo>
