--- a/sourcing/views/hr_sourcing_views.xml
+++ b/sourcing/views/hr_sourcing_views.xml
@@ -304,8 +304,8 @@
         </field>
     </record>
 
-   <menuitem id='base_hr_sourcing_menu' name="Sourcing" parent='hr_recruitment.menu_hr_recruitment_root'/>
-   <menuitem action='hr_sourcing_action' id='hr_sourcing_menu' parent='base_hr_sourcing_menu' sequence="1"/>
+   <menuitem id='base_hr_sourcing_menu' name="Sourcing" parent='hr_recruitment.menu_hr_recruitment_root' groups="sourcing.group_sourcing_manager,sourcing.group_sourcing_user"/>
+   <menuitem action='hr_sourcing_action' id='hr_sourcing_menu' groups="sourcing.group_sourcing_manager,sourcing.group_sourcing_user" parent='base_hr_sourcing_menu' sequence="1"/>
 
     <!--
         hr.sourcing.refuse.reason views
@@ -351,5 +351,5 @@
         id="menu_hr_sourcing_refuse_reason"
         action="hr_sourcing_refuse_reason_action"
         parent="base_hr_sourcing_menu"
-        sequence="2"/>
+        sequence="2" groups="sourcing.group_sourcing_manager,sourcing.group_sourcing_user"/>
 </odoo>
