--- a/employee_recruitment_customisation/views/res_partner_views.xml
+++ b/employee_recruitment_customisation/views/res_partner_views.xml
@@ -120,6 +120,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="view_mode">kanban</field>
         <!-- <field name="context">{'search_default_enable_wo': True}</field> -->
+        <field name='domain'>[('enable_wo','=',1)]</field>
         <field name="view_id" ref="partner_workorder_overview_kanban"/>
         <field name="help" type="html">
           <p class="o_view_nocontent_smiling_face">
