Removed groups to pages in application

--- a/employee_recruitment_customisation/views/hr_applicant_views.xml
+++ b/employee_recruitment_customisation/views/hr_applicant_views.xml
@@ -120,7 +120,7 @@
                 <field name="emp_id"/>
             </xpath>
             <xpath expr="//sheet/group[1]" position="after">
-                <notebook colspan="4" groups="hr_recruitment.group_hr_recruitment_manager">
+                <notebook colspan="4">
                     <page name="applicant_details" string="Applicant details">
                         <group>
                             <group>
@@ -159,7 +159,7 @@
                                     </div>
                                 </div>
                             </group>
-                            <group string="Personal Details" groups="hr_recruitment.group_hr_recruitment_manager">
+                            <group string="Personal Details">
                                 <label for="street" string="Current Address"/>
                                 <div class="o_address_format">
                                     <field name="street" placeholder="Street..." class="o_address_street"/>
