--- a/employee_recruitment_customisation/report/hr_employee_offer_letter_pdf.xml
+++ b/employee_recruitment_customisation/report/hr_employee_offer_letter_pdf.xml
@@ -15,7 +15,7 @@
           <field name="model">hr.applicant</field>
           <field name="report_type">qweb-pdf</field>
           <field name="report_name">employee_recruitment_customisation.salary_annexure</field>
-          <field name="print_report_name">'%s - Offer Letter' % (object.partner_name)</field>
+          <field name="print_report_name">'%s - Salary Annexure' % (object.partner_name)</field>
           <field name="binding_model_id" ref="model_hr_applicant"/>
           <field name="binding_type">report</field>
       </record>
